--- a/gb/21/7/22/n13107712.md
+++ b/gb/21/7/22/n13107712.md
@@ -1,22 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ilrwbl3817/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ilrwbl3817/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ilrwbl3817/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ilrwbl3817/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ilrwbl3817/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ilrwbl3817/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ilrwbl3817/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ilrwbl3817/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ilrwbl3817/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ilrwbl3817/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ilrwbl3817/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ilrwbl3817/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ilrwbl3817/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ilrwbl3817/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻看点】暴雨仍肆虐河南 多少人魂断5分钟</h2>
-<a href="https://git.io/J8epb"><img width="600" src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ilrwbl3817/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6>暴雨仍肆虐河南，新乡十万火急！京广隧道逃生者现身，多少人魂断5分钟？郑州停水停电，次生灾害显现。（《新闻看点》提供）
-</h6>
+<a href="https://d1qf0g0z67vzsk.cloudfront.net/E5tH59Hbg"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
-	<p>【大纪元2021年07月22日讯】大家好，欢迎大家关注《<ahref="https://github.com/ilrwbl3817/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》，我是李沐阳。今天是美东时间7月22日（星期四），亚洲时间是7月23日（星期五）。</p>
+	<p>【大纪元2021年07月22日讯】大家好，欢迎大家关注《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》，我是李沐阳。今天是美东时间7月22日（星期四），亚洲时间是7月23日（星期五）。</p>
 <p>今天焦点：暴雨仍肆虐河南，新乡十万火急！京广隧道逃生者现身，多少人魂断5分钟？郑州停水停电，次生灾害显现；蔡英文哀悼亡灵，中共扭捏回应；大陆导演挑衅台湾，小粉红患癌求助网友。</p>
-<p>中共国家卫健委副主任曾益新22日表示，中共拒绝世卫组织提议，对<ahref="https://github.com/ilrwbl3817/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E8%B5%B7%E6%BA%90.md#1">病毒起源</a>进行第二阶段调查，包括对武汉实验室泄漏的调查。但美国国会议员表示，必须追究中共的责任。</p>
+<p>中共国家卫健委副主任曾益新22日表示，中共拒绝世卫组织提议，对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92%E8%B5%B7%E6%BA%90.md#1">病毒起源</a>进行第二阶段调查，包括对武汉实验室泄漏的调查。但美国国会议员表示，必须追究中共的责任。</p>
 <p>一位网名“只是曾经”的郑州地铁员工，22日匿名在网络爆料，痛批领导为了保全乌纱帽，不给自己添麻烦，在接到红色预警的情况下坚持运营，造成最后不可挽回的局面。他直指决策者根本就是杀人犯。</p>
 <p>21日，日本驻澳大利亚大使山上信吾发表了题为“日澳关系：当前形势和未来前景”的演讲。谈到对华关系问题时，山上信吾表示，日本和澳大利亚“在同一条船上，我们应该一起努力”。</p>
 <p>马达加斯加检察总长办公室22日表示，20日逮捕了几名“外国人和马达加斯加当地人”，几名嫌疑人企图暗杀总统安德里?拉乔利纳，计划失败。</p>
 <p>截止到美东时间7月22日下午2点，全球新增确诊中共病毒（武汉病毒、新冠病毒）人数55万9,279人，总确诊人数达到了1亿9,278万3,833人，死亡总数是414万1,884人。</p>
-<p><center><a title="YouTube video player" src=""></a><a href="https://git.io/J8epb"><img width="600" src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ilrwbl3817/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/2GMLtP5x6fQ" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>下面进入今天的话题。今天还是重点谈河南的灾情。京广隧道究竟死了多少人，有视频为证，有逃生者亲身讲述。此外还要谈到这次水灾后，引发的相关问题。希望大家、特别是大陆的朋友能够坚持看到最后。</p>
+<p><center><a src=""></a><a href="https://d1qf0g0z67vzsk.cloudfront.net/E5tH59Hbg"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/fac1757c-0719-42fe-9147-f5c7203cdfe0?r=16x9&amp;d=1793" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>下面进入今天的话题。今天还是重点谈河南的灾情。京广隧道究竟死了多少人，有视频为证，有逃生者亲身讲述。此外还要谈到这次水灾后，引发的相关问题。希望大家、特别是大陆的朋友能够坚持看到最后。</p>
 <h2>暴雨仍肆虐河南 辉县市91村进水</h2>
 <p>今天（22日），河南气象部门继续发布了暴雨红色预警，多地仍有暴雨。主要集中在河南焦作、新乡、鹤壁和安阳地区，3个小时的累积降雨量达到100-130毫米。</p>
-<p>当地气象部门表示，暴雨在今天向北部有所移动。安阳市6个展店降水量都超过600毫米。网络上的影片显示，安阳市区严重积水，部分路段的车辆被<ahref="https://github.com/ilrwbl3817/djy/blob/master/gb/tag/%E6%B4%AA%E6%B0%B4.md#1">洪水</a>冲走了。</p>
+<p>当地气象部门表示，暴雨在今天向北部有所移动。安阳市6个展店降水量都超过600毫米。网络上的影片显示，安阳市区严重积水，部分路段的车辆被<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B4%AA%E6%B0%B4.md#1">洪水</a>冲走了。</p>
 <p>安阳防汛指挥部紧急通告，全市所有公交车辆停运。各单位除了必要的抢险救灾和值班人员外，全部居家办公。所有的地下商场、停车场人员全部撤离，以确保安全。</p>
 <p>暴雨袭击下，新乡市共有7座水库溢流，导致辉县市、卫辉市、长垣市、获嘉县、原阳县和封丘县58个乡镇受灾。</p>
 <p>其中辉县市灾情最严重，目前有91个村庄进水。大陆澎湃新闻报导，“确实有几个乡镇、村庄被淹了。当地一些村庄的水位比较深，有的深达1.5米，甚至达2米。”报导指出，辉县市断水断电的情况不可避免。</p>
@@ -24,7 +23,7 @@
 <p>工作人员表示，“淹得太厉害”，目前市里4座水库已经溢流。当地地势较低的村庄或泄洪区已经组织撤离，因为“溃堤风险较大，已经有几处塌方”。</p>
 <h2>十万火急！新乡网民呼救</h2>
 <p>新乡风泉区孟庄村一位村民告诉大纪元，孟庄村基本都是平房，村里的水深现在有1.5米，附近有二十多人急需转移。虽然联系到已经到达新乡的山西救援队，但风泉区离救援队所在的新乡很远。而且救援队说“自己另外有任务，不会去孟庄村”。</p>
-<p>这位村民表示，现在村里是“没水没电没信号”，他们的手机都快没电了。他特别指出，进村的<ahref="https://github.com/ilrwbl3817/djy/blob/master/gb/tag/%E6%B4%AA%E6%B0%B4.md#1">洪水</a>是“泄洪堤坝决堤造成的”。</p>
+<p>这位村民表示，现在村里是“没水没电没信号”，他们的手机都快没电了。他特别指出，进村的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B4%AA%E6%B0%B4.md#1">洪水</a>是“泄洪堤坝决堤造成的”。</p>
 <p>新乡网民也在网上大声求救，呼吁关注。一位网民说辉县市“已经很严重了”，“现在已经有四座中型水库泄洪，连续三座桥崩塌，周围都是山更容易发生事故，校区和村庄均已被淹，他们需要支援！”</p>
 <p>一位卫辉市网民说，“卫河、孟姜女河、共产主义渠，卫辉海拔低洼，焦作新乡辉县的雨水洪水都从这三条河排泄，从17日开始到现在大雨没有停，大暴雨百年不遇，全县村庄几乎全部沦陷，县城内涝已经不堪一击，三条河堤危在旦夕，救救卫辉吧。”</p>
 <p>另一位顿坊店乡清水河村网友公布了一个电话，以引起人们的注意，他说“几乎全村被困！已经转移的群众只有寥寥。我们需要救援，我们村坚持不到晚上了！村子河堤已有两处有决堤情况了，我村村民已经尽全力围堵了，情况依旧不乐观，水位还在上涨，现在水平面已和村内半层房持平！确认未被救援！”</p>
@@ -103,7 +102,7 @@
 <p>第一幅画作叫“中共式泄洪”。画面上有两个人，一个是做气象讯报的工作人员，另一个是打电话给各个部门的中共领导。</p>
 <p>那个工作人员对领导说，“领导，泄洪的机会来啦！今天将有特大暴雨，可以悄悄地泄洪。”然后那个中共官员一手摁着“开闸”的红色摁扭，另一个手拿着电话给不同的部门打电话部署任务。</p>
 <p>这个中共官员要求气象台“发科普文章，五千年一遇特大降水，你不用管大禹知道不知道……”。他要XX电视台“做抗洪专题正面播报，我当保障了人民财产安全，无人员死亡”。泄洪后他要求报社“明早发预警快讯，说后天将要泄洪，政府将全力以赴保障人民生命财产安全”。然后他要求宣传部“加紧删贴封号，让水军把舆论导向美军气象生物战”。</p>
-<figure id="attachment_13108440" aria-describedby="caption-attachment-13108440" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13108440-424caedaece5cd614781a22f46d35520.jpg"><img class="size-large wp-image-13108440" src="https://i.epochtimes.com/assets/uploads/2021/07/id13108440-424caedaece5cd614781a22f46d35520-600x491.jpg" alt="" width="600" b="491" /></a><figcaption id="caption-attachment-13108440" class="wp-caption-text">《中共式泄洪》。（<ahref="https://github.com/ilrwbl3817/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>观众提供）</figcaption></figure>
+<figure id="attachment_13108440" aria-describedby="caption-attachment-13108440" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13108440-424caedaece5cd614781a22f46d35520.jpg"><img class="size-large wp-image-13108440" src="https://i.epochtimes.com/assets/uploads/2021/07/id13108440-424caedaece5cd614781a22f46d35520-600x491.jpg" alt="" width="600" b="491" /></a><figcaption id="caption-attachment-13108440" class="wp-caption-text">《中共式泄洪》。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>观众提供）</figcaption></figure>
 <p>不用再说什么了，如果不清楚这次郑州水灾的前前后后，其实大家通过这幅画作，就可以基本上了解了。其实也不只是郑州，中国历次出现的灾难，中共都是这种运作模式，这就是中共的邪恶逻辑。</p>
 <p>第二幅画作叫“对国民的信息战”。画面中间部分有一群人，都在摀着自己的耳朵向前走。这些人在说着“中国最强大，中国最安全，没有共产党就没有新中国……”，但是这些人前面就是万丈深渊，不过这些人并不知道。</p>
 <p>而且还在不同的路上，都有人听信中共的宣传，也在往这里走着。这些人中有愤青，有不过问政治者，有海归派，有岁月静好，有养娃族，还有过来人。只有一个反共的被中共称为“境外势力”的人，在揭露中共。</p>
@@ -128,41 +127,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/16/n13094168.md#1">【新闻看点】中共近台日军演 美25猛禽飞亚太</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/19/n13100116.md#1">【新闻看点】美军机再飞台湾 中共4黑客被祭旗</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/20/n13102758.md#1">【新闻看点】美送台反击中共利器 亚洲军备竞赛</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/21/n13105546.md#1">【新闻看点】郑州是内涝还是洪水 习淡化灾情？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/16/n13094168.md#1">【新闻看点】中共近台日军演 美25猛禽飞亚太</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/19/n13100116.md#1">【新闻看点】美军机再飞台湾 中共4黑客被祭旗</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/20/n13102758.md#1">【新闻看点】美送台反击中共利器 亚洲军备竞赛</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/21/n13105546.md#1">【新闻看点】郑州是内涝还是洪水 习淡化灾情？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/11/n9947822.md#1" target="_blank">文革中自杀的几个名人（2）文联主席老舍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352966.md#1" target="_blank">袁红冰：法轮功对中国政治的影响</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/4/n9806020.md#1" target="_blank">刘晓：几置李锐于死地的“革命母亲”范元甄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/19/n3874295.md#1" target="_blank">飞瀑：中共酷刑——灌水</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/7/n13073680.md#1">【命理】年过50无子 命师算出他40岁早得一子</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/15/n13091924.md#1">【未解之谜】文革横死 转生却不为复仇</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/12/n13083124.md#1">对于邪灵“附体” 东西方文化如何对待？</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/15/n13091973.md#1">【未解之谜】 另类转世 亡夫化鸟续前缘</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/22/n13108313.md#1">【时事纵横】郑州现死亡隧道 洪灾冲习家军仕途</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/6/15/n13024284.md#1">【思想领袖】巴斯：中共窥探德州空军基地？</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/22/n13107665.md#1">【十字路口】河南洪水谁来扛？甩锅维稳4手段</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/20/n13102731.md#1">暴雨成灾 大陆48小时内第三座水坝溃堤</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/21/n13103768.md#1">视频(2)：黄河支流决口 惊天洪水吞没郑州</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/21/n13104384.md#1">【一线采访】 郑州路面数百处塌陷 民心恐慌</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/19/n13100030.md#1">邓丽君别样“现身” 完美原声鼓励台湾防疫</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/21/n13105460.md#1">57岁刘青云近照曝光 粉丝惊呼认不出</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/20/n13102805.md#1">吴奇隆刘诗诗结婚6年 友人爆夫妻俩互动模式</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/19/n13100208.md#1">频被拍肚凸传怀孕 范冰冰：是谁在诋毁我</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/20/n13102588.md#1">不舍台湾遭疫情打击 杜汶泽宣布捐待用餐</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/17/n13095397.md#1">中医3步抗老养颜 天天做去皱纹、让皮肤变年轻</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/21/n13103380.md#1">疫苗混打保护力更强？这组合或比2剂辉瑞效果好</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/21/n13103895.md#1">盘点世界各地知名品牌的辣椒酱（一）</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/22/n13106221.md#1">大脚怪抱孩子渡河？ 美国男子拍到奇特画面</a></li>
-<li><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/20/n13101397.md#1">当心iPhone过热 苹果公司透露正常使用温度</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ilrwbl3817/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ilrwbl3817/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/22/n13107712.htm">【新闻看点】暴雨仍肆虐河南 多少人魂断5分钟</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/22/n13107712.htm">【新闻看点】暴雨仍肆虐河南 多少人魂断5分钟</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ilrwbl3817/djy/blob/master/gb/21/7/22/n13107712.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ilrwbl3817/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ilrwbl3817/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ilrwbl3817/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ilrwbl3817/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/7/22/n13107712.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
